deploy: c5bd27656348f86a941be469cb031df991de34be

--- a/Doss-Gollin-Biosketch.tex
+++ b/Doss-Gollin-Biosketch.tex
@@ -91,7 +91,7 @@
 \begin{itemize}[label={}]
   
   \item \textbf{Rice University}
-        \textit{Assistant Professor}, Department of Civil \& Environmental Engineering, 2021--present.
+        \textit{Assistant Professor}, Department of Civil \& Environmental Engineering, 2021--.
   
   \item \textbf{The Pennsylvania State University}
         \textit{Postdoctoral Scholar}, Earth \& Environmental Systems Institute, 2020.
