deploy: d4be856375c3c3478b516bfa8e4e339dc36cb6e8

--- a/Doss-Gollin-CV.tex
+++ b/Doss-Gollin-CV.tex
@@ -320,7 +320,7 @@
 
 \hangingitem{\textit{National Science Foundation}\textit{: Strengthening America's Infrastructure}. ``EAGER: Participatory Design for Water Quality Monitoring of Highly Decentralized Water Infrastructure Systems.'' \textbf{PI} (PI: Alicia Cooperman). \textbf{\$104,684}.}{2022--2025}
 
-\hangingitem{\textit{National Science Foundation}\textit{: Climate and Large-Scale Dynamics}. ``Collaborative Research: Evaluating the Past and Future of Mississippi River Hydroclimatology to Constrain Risk via Integrated Climate Modeling, Observations, and Reconstructions.'' \textbf{co-PI}. \textbf{\$472,024}.}{2022--2025}
+\hangingitem{\textit{National Science Foundation}\textit{: Climate and Large-Scale Dynamics}. ``Collaborative Research: Evaluating the Past and Future of Mississippi River Hydroclimatology to Constrain Risk via Integrated Climate Modeling, Observations, and Reconstructions.'' \textbf{co-PI} (PI: Sylvia Dee). \textbf{\$472,024}.}{2022--2025}
 
 \hangingitem{\textit{Rice University}\textit{: Sustainable Futures Fund}. ``Leveraging Earth System Observations at Multiple Scales to Improve Stormwater Management in Houston.'' \textbf{Lead PI}. \textbf{\$50,000}.}{2022--2023}
 
