deploy: 37f5ecb80a428cf709a39d52314ca79fc5a81ca3

--- a/Doss-Gollin-Biosketch.tex
+++ b/Doss-Gollin-Biosketch.tex
@@ -107,7 +107,7 @@
 \begin{itemize}[label={}]
   
   \item \textbf{Columbia University}
-        \textit{Ph.D}, Earth \& Environmental Engineering, 2020.
+        \textit{Ph.D.}, Earth \& Environmental Engineering, 2020.
   
   \item \textbf{Columbia University}
         \textit{M.S.}, Earth \& Environmental Engineering, 2016.
